--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "jquery": "^3.6.2",
     "popper.js": "^1.16.1",
     "toastr": "^2.1.4",
